--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "check": "sh ./check_dependencies.sh",
     "start": "sh ./run_benchmarks.sh",
     "plot": "sh ./run_plot.sh",
-    "create": "sh ./sample_file/createfile.sh"
+    "create": "sh ./sample_file/createfile.sh",
+    "build": "sh ./c/build.sh && sh ./rust/indexof/src/build.sh && sh ./go/build.sh"
   },
   "repository": {
     "type": "git",
