--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check": "sh ./check_dependencies.sh",
     "start": "sh ./run_benchmarks.sh",
     "plot": "sh ./run_plot.sh",
+    "plot-all": "sh ./run_plot_for_node_versions.sh",
     "create": "sh ./sample_file/createfile.sh",
     "build": "sh ./c/build.sh && sh ./rust/indexof/src/build.sh && sh ./go/build.sh"
   },
