--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://fredy.git"
+    "url": "https://github.com/FredySandoval/benchmark-indexof"
   },
   "keywords": [
     "indexof",
